lang/tests/contract/ui/fail/02-missing-constructor.rs
use liquid_lang as liquid;

#[liquid::contract]
mod noop {
    #[liquid(storage)]
    struct Noop {}

    #[liquid(methods)]
    impl Noop {
        pub fn noop(&self) {}
    }
}

fn main() {}
